# hyprwire-rs

./: Cargo.toml  README.md  coverage.json  deny.toml  flake.nix  index.html
.forgejo/workflows/: coverage.yaml  test.yaml
.github/workflows/: coverage.yaml
examples/: client.rs  test_protocol_v1.rs
examples/basic/: build.rs  client.rs  server.rs  test_protocol_v1.rs
examples/calloop/: build.rs  client.rs  server.rs
examples/fork/: build.rs  main.rs
hyprwire/: Cargo.toml  build.rs  build.rs.html  index.html
hyprwire-core/: Cargo.toml
hyprwire-core/src/: index.html  lib.rs  types.rs  types.rs.html
hyprwire-core/src/message/: error.rs  error.rs.html  index.html  mod.rs  mod.rs.html
hyprwire-core/src/message/wire/: bind_protocol.rs  bind_protocol.rs.html  fatal_protocol_error.rs  fatal_protocol_error.rs.html  generic_protocol_message.rs  generic_protocol_message.rs.html  handshake_ack.rs  handshake_ack.rs.html  handshake_begin.rs  handshake_begin.rs.html  handshake_protocols.rs  handshake_protocols.rs.html  hello.rs  hello.rs.html  index.html  mod.rs  mod.rs.html  new_object.rs  new_object.rs.html  roundtrip_done.rs  roundtrip_done.rs.html  roundtrip_request.rs  roundtrip_request.rs.html
hyprwire-protocols/: Cargo.toml
hyprwire-protocols/src/: lib.rs
hyprwire-scanner/: Cargo.toml
hyprwire-scanner/src/: compile.rs  compile.rs.html  generate.rs  generate.rs.html  index.html  lib.rs  parse.rs  parse.rs.html
hyprwire-scanner/tests/: generate_proptest.proptest-regressions  generate_proptest.rs  generate_proptest.rs.html  index.html  scanner_snapshots.rs  scanner_snapshots.rs.html
hyprwire-scanner/tests/snapshots/: scanner_snapshots__scanner_protocol_v1.snap  scanner_snapshots__scanner_protocol_v1_derive_macro.snap
hyprwire/benches/: client_connect_disconnect.rs  multiple_clients.rs  single_client.rs
hyprwire/benches/protocols/: bench-protocol-v1.xml
hyprwire/examples/basic/: client.rs  server.rs
hyprwire/examples/calloop/: client.rs  server.rs
hyprwire/examples/fork/: main.rs
hyprwire/examples/protocols/: protocol-v1.xml
hyprwire/src/: error.rs  error.rs.html  helpers.rs  helpers.rs.html  index.html  lib.rs  lib.rs.html  message.rs  message.rs.html
hyprwire/src/client/: client_object.rs  client_object.rs.html  client_socket.rs  client_socket.rs.html  index.html  mod.rs  mod.rs.html  server_spec.rs  server_spec.rs.html
hyprwire/src/implementation/: client.rs  index.html  mod.rs  object.rs  object.rs.html  server.rs  types.rs  wire_object.rs  wire_object.rs.html
hyprwire/src/message/: mod.rs
hyprwire/src/message/messages/: bind_protocol.rs  fatal_protocol_error.rs  generic_protocol_message.rs  handshake_ack.rs  handshake_begin.rs  handshake_protocols.rs  hello.rs  mod.rs  new_object.rs  roundtrip_done.rs  roundtrip_request.rs
hyprwire/src/server/: index.html  mod.rs  server_client.rs  server_client.rs.html  server_object.rs  server_object.rs.html  server_socket.rs  server_socket.rs.html
hyprwire/src/socket/: index.html  mod.rs  socket_helpers.rs  socket_helpers.rs.html
hyprwire/tests/: integration.rs
hyprwire/tests/protocols/: test-protocol-v1.xml
scanner/: Cargo.toml
scanner/src/: compile.rs  generate.rs  lib.rs  parse.rs
src/: helpers.rs  lib.rs
src/client/: client.rs  client_object.rs  client_socket.rs  mod.rs  server_spec.rs
src/implementation/: client.rs  mod.rs  object.rs  server.rs  types.rs  wire_object.rs
src/message/: mod.rs
src/message/messages/: bind_protocol.rs  fatal_protocol_error.rs  generic_protocol_message.rs  handshake_ack.rs  handshake_begin.rs  handshake_protocols.rs  hello.rs  mod.rs  new_object.rs  roundtrip_done.rs  roundtrip_request.rs
src/scanner/: mod.rs
src/server/: mod.rs  server_client.rs  server_object.rs  server_socket.rs
src/socket/: socket_helpers.rs
tests/: moxlauncher_core.xml  protocol-v1.xml  scanner_snapshots.rs
tests/snapshots/: scanner_snapshots__scanner_protocol_v1-2.snap  scanner_snapshots__scanner_protocol_v1.snap  scanner_snapshots__scanner_protocol_v1_derive_macro.snap
