[workspace]
members = ["hyprwire", "hyprwire-protocols", "hyprwire-scanner"]
default-members = ["hyprwire", "hyprwire-protocols", "hyprwire-scanner"]
resolver = "3"

[workspace.package]
version = "0.2.9"
edition = "2024"
rust-version = "1.85"
license = "BSD-3-Clause"
repository = "https://git.r0chd.pl/r0chd/hyprwire-rs"
readme = "README.md"
