[package]
name = "hyprwire-core"
version.workspace = true
edition.workspace = true
description = "Wire format, message types, and protocol traits for the Hyprwire IPC protocol"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["ipc", "wire-protocol", "hyprwire", "serialization", "no-std"]
categories = ["no-std", "encoding", "network-programming"]
