[package]
name = "hyprwire-scanner"
version.workspace = true
edition.workspace = true
description = "Protocol scanner and code generator for hyprwire"
license.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["ipc", "wire-protocol", "code-generation"]
categories = ["development-tools::build-utils"]

[dependencies]
quick-xml = "0.37"
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
insta = "1"
