[package]
name = "hyprwire"
version.workspace = true
edition.workspace = true
description = "A fast and consistent wire protocol for IPC"
license.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["ipc", "wire-protocol", "hyprwire", "serialization"]
categories = ["network-programming", "encoding"]
build = "build.rs"

[[example]]
name = "basic-client"
path = "examples/basic/client.rs"

[[example]]
name = "basic-server"
path = "examples/basic/server.rs"

[[example]]
name = "fork"
path = "examples/fork/main.rs"

[[example]]
name = "calloop-client"
path = "examples/calloop/client.rs"

[[example]]
name = "calloop-server"
path = "examples/calloop/server.rs"

[dependencies]
log = { version = "0.4.29", default-features = false, optional = true }
nix = { version = "0.31.1", features = [
  "poll",
  "socket",
  "uio",
], default-features = false }
hyprwire-core = { path = "../hyprwire-core" }

[features]
log = ["dep:log"]

[build-dependencies]
hyprwire-scanner = { path = "../hyprwire-scanner" }

[dev-dependencies]
calloop = "0.14.4"
env_logger = { version = "0.11.9", default-features = false }
insta = "1"
log = { version = "0.4.29", default-features = false }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "single_client"
harness = false

[[bench]]
name = "multiple_clients"
harness = false

[[bench]]
name = "client_connect_disconnect"
harness = false
