[package]
name = "hyprwire-scanner"
version = "0.1.8"
edition = "2024"
description = "Protocol scanner and code generator for hyprwire"
license = "BSD-3-Clause"
repository = "https://git.r0chd.pl/r0chd/hyprwire-rs"
readme = "../README.md"
keywords = ["ipc", "wire-protocol", "code-generation"]
categories = ["development-tools::build-utils"]

[dependencies]
quick-xml = "0.37"
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2"
syn = { version = "2", features = ["full"] }
